--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
 	},
 	"dependencies": {
 		"axios": "^1.7.9",
+		"framer-motion": "^12.4.1",
 		"lodash": "^4.17.21",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.4.0",
 		"react-router-dom": "^7.1.3",
-		"react-star-ratings": "^2.3.0"
+		"react-star-ratings": "^2.3.0",
+		"swiper": "^11.2.2"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.17.0",
